# idea-theory

./: .gitignore  AGENTS.md  PRD.json  PRD.json.pre_steer  PROGRESS.md  README.md  build_site.py  lean-toolchain  textbook-plan.md  write_prd.py
book/: FRAMEWORK.md  SHARED_BRIEF.md  book.tex  build.sh  epub.css  metadata.yaml  preamble-kindle.tex  preamble.tex  references.bib
docs/: about.html  aufhebung-decomposition.html  axioms.html  conjugation-action.html  conjugation.html  cultural-transmission.html  emergence-2-cocycle.html  emergence-cocycle.html  emergent-novelty.html  graded-idea-algebra.html  idea-composition.html  idea-monoid.html  index.html  lean.html  literature.html  meaning-curvature.html  resonance-pairing.html  social-composition.html  structural-equivalence.html  style.css  theorems.html  transmission-chain.html  vol1.html  vol2.html  vol3.html  vol4.html  vol5.html  vol6.html  volumes.html
docs/lean/: index.html  (+6 more)
experiments/cocycle/: README.md  pyproject.toml  requirements.txt
experiments/cocycle/activations/: .gitkeep
experiments/cocycle/configs/: attn_only_2l.yaml  gpt2_small.yaml  pythia_70m.yaml  tinystories_33m.yaml
experiments/cocycle/harness/: __init__.py  cocycle.py  feature_extractor.py  features.py  measurement.py  model.py  model_loader.py  recovery.py
experiments/cocycle/scripts/: __init__.py  aggregate_models.py  preflight.py  run_all_models.py  run_e1.py  run_e2.py  run_e3.py
lean/: IdeaTheory.lean  lake-manifest.json  lakefile.lean
tex/: preamble.sty  references.bib
textbook/: AGENT_RULES.md  book.md  idea-theory.epub
(+260 files in other folders)
